tests/error/comptime/check_dereference05.bz
// error: invalid memory access of an object of type 'int32'
// note: while evaluating expression at compile time
// note: address points to an object from a finished stack frame
// error: failed to evaluate expression at compile time
function foo() -> *int32
{
	let i = 0;
	return &i;
}

function test()
{
	(consteval {
		*foo();
	});
}
